[package]
name = "ovenrack"
version = "2.0.0"
authors = ["Eric Mikulin <ericm99@gmail.com>"]
edition = "2021"

[dependencies]
byteorder = "1.4"
chrono = "0.4"
clap = { version = "4.2", features = ["cargo"] }
log = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
rustls = "0.21"
simplelog = "0.12"
webpki-roots = "0.23"
