[package]
name = "ovenrack"
version = "2.0.0"
authors = ["Eric Mikulin <ericm99@gmail.com>"]
edition = "2021"

[dependencies]
retry = "2.0"
byteorder = "1.4"
clap = { version = "4.3", features = ["cargo"] }
log = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
rustls = "0.23"
simplelog = "0.12"
time = "0.3"
webpki-roots = "0.26"
