[package]
name = "ovenrack"
version = "2.1.0"
authors = ["Eric Mikulin <ericm99@gmail.com>"]
edition = "2021"

[dependencies]
byteorder = "1.4"
clap = { version = "4.3", features = ["cargo"] }
log = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking"] }
retry = "2.0"
rustls = "0.23"
simplelog = "0.12"
time = "0.3"
webpki-roots = "0.26"
